--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
+    <string name="name">Name</string>
 </resources>
