--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,4 +6,5 @@
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
     <string name="name">Name</string>
+    <string name="submit">Submit</string>
 </resources>
