--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,4 +7,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="name">Name</string>
     <string name="submit">Submit</string>
+    <string name="dialog_title">Dialog Title</string>
+    <string name="dialog_msg">This is a dialog Message section where we can change the message anytime dynamatically.</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
